--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,8 @@
 language: node_js
 node_js:
   - "node"
-install:
-  - . $HOME/.nvm/nvm.sh
-  - nvm install stable
-  - nvm use stable
 before_script:
+  - cd source
   - npm install
   - npm install --global surge
   - npm install --global gulp-cli
