--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,12 @@ before_script:
   - npm install --global surge
   - npm install --global gulp-cli
 script:
-  - ./scripts/staging-build.sh
+  - /scripts/staging-build.sh
 deploy:
   provider: script
   skip_cleanup: true
   script:
-    - ./scripts/staging-deploy.sh
+    - /scripts/staging-deploy.sh
 branches:
   only:
     staging
