--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,10 @@ node_js:
   - "node"
 cache:
   directories:
-    - node_modules
+    - source/node_modules
 before_script:
   - cd source
   - npm install
-  - npm install --global surge
-  - npm install --global gulp-cli
 script:
   - ../scripts/staging-build.sh
 branches:
