--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,10 @@
 language: node_js
 node_js:
   - "node"
-cache:
-  directories:
-    - source/node_modules
-before_script:
-  - cd source
-  - npm install
+
 script:
-  - ../scripts/staging-build.sh
+  - scripts/staging-deploy.sh
+
 branches:
   only:
     staging
