--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "gatsby": "^2.8.5",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1",
+    "tachyons-components": "^1.0.1"
   },
   "devDependencies": {
     "prettier": "^1.18.0"
