--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "tachyons-components": "^1.0.1"
   },
   "devDependencies": {
+    "gatsby-plugin-sass": "^2.1.0",
     "gatsby-transformer-remark": "^2.5.0",
-    "prettier": "^1.18.0"
+    "node-sass": "^4.12.0",
+    "prettier": "^1.18.0",
+    "styled-components": "^4.3.2"
   },
   "repository": {
     "type": "git",
